intergrated save system

--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@
                 </div>
             </section>
 
+            <section class="save">
+                <div class="row text-center">
+                    <div class="col-6">
+                        <button class="btn btn-success" id="saveButton">Save Game!</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-success" id="deleteButton">Delete Game</button>
+                    </div>
+                </div>
+            </section>
+
             <section id="stats">
                 <div class="stat-nav">
                     <div class="row text-center">
@@ -161,6 +172,14 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <button class="btn btn-warning" id="leaveTraining">Leave Training</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="load">
+                <div class="row">
+                    <div class="col-12">
+                        <button class="btn btn-success" id="loadButton">Load Game!</button>
                     </div>
                 </div>
             </section>
