--- a/index.html
+++ b/index.html
@@ -61,23 +61,23 @@
                             <h5 id="goldResult"></h5>
                             <h5 id="xpResult"></h5>
                         </div>
-                        <div class="col-2">
-                            <h5>Name: <span id="playerName"></span> - <span id="playerLevel"></span></h5>
+                        <div class="col-4 col-md-2">
+                            <p class="display-stat">Name: <span id="playerName"></span> - <span id="playerLevel"></span></p>
                         </div>
-                        <div class="col-2">
-                            <h5>Health: <span id="playerHealth"></span>/<span id="playerMaxHp"></span></h5>
+                        <div class="col-4 col-md-2">
+                            <p class="display-stat">Health: <span id="playerHealth"></span>/<span id="playerMaxHp"></span></p>
                         </div>
-                        <div class="col-2">
-                            <h5>Gold: <span id="playerGold"></span></h5>
+                        <div class="col-4 col-md-2">
+                            <p class="display-stat">Gold: <span id="playerGold"></span></p>
                         </div>
-                        <div class="col-2">
-                            <h5>XP: <span id="playerXp"></span></h5>
+                        <div class="col-4 col-md-2">
+                            <p class="display-stat">XP: <span id="playerXp"></span></p>
                         </div>
-                        <div class="col-2">
-                            <h5>Power: <span id="playerPower"></span></h5>
+                        <div class="col-4 col-md-2">
+                            <p class="display-stat">Power: <span id="playerPower"></span></p>
                         </div>
-                        <div class="col-2">
-                            <h5>Speed: <span id="playerSpeed"></span></h5>
+                        <div class="col-4 col-md-2">
+                            <p class="display-stat">Speed: <span id="playerSpeed"></span></p>
                         </div>
                     </div>
                 </div>
@@ -136,16 +136,16 @@
 
             <section class="shop">
                 <div class="row">
-                    <div class="col-12 text-center">
+                    <div class="col-12">
                         <h3>Shop!</h3>
                     </div>
                 </div>
-                <div class="row text-center">
-                    <div class="col-6">
+                <div class="row text-center mb-5">
+                    <div class="col-md-6 col-12">
                         <h4>Upgrade Power Cost: <span id="powerUpgrade"></span></h4>
                         <button class="btn btn-success" id="buyPower">Upgrade Power</button>
                     </div>
-                    <div class="col-6">
+                    <div class="col-md-6 col-12">
                         <h4>Upgrade Speed Cost: <span id="speedUpgrade"></span></h4>
                         <button class="btn btn-success" id="buySpeed">Upgrade Speed</button>
                     </div>
