refactored adding enemy stats and added bozz

--- a/index.html
+++ b/index.html
@@ -83,14 +83,17 @@
                     <div class="col-12 text-center">
                         <p>Choose a Fight!</p>
                     </div>
-                    <div class="col-4 text-center">
+                    <div class="col-3 text-center">
                         <button class="btn btn-success" id="startEasy">Easy</button>
                     </div>
-                    <div class="col-4 text-center">
+                    <div class="col-3 text-center">
                         <button class="btn btn-success" id="startMedium">Medium</button>
                     </div>
-                    <div class="col-4 text-center">
+                    <div class="col-3 text-center">
                         <button class="btn btn-success" id="startHard">Hard</button>
+                    </div>
+                    <div class="col-3 text-center">
+                        <button class="btn btn-danger" id="startBoss">Boss</button>
                     </div>
                 </div>
                 <div class="row">
