added heal function and refactored shop

--- a/index.html
+++ b/index.html
@@ -107,9 +107,12 @@
             </section>
 
             <section class="combat">
-                <div class="row text-center">
-                    <div class="col-12 mb-3">
-                        <button class="btn btn-success" id="attackButton">Attack</button>
+                <div class="row text-center mb-3">
+                    <div class="col-6">
+                        <button class="btn btn-warning" id="attackButton">Attack</button>
+                    </div>
+                    <div class="col-6">
+                        <button class="btn btn-success" id="healButton">Heal</button>
                     </div>
                 </div>
                 <div class="row text-center">
