Autodeath function and display

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <section class="name">
                 <div class="row">
                     <div class="col-12">
-                        <p>Welcome Player - Please input your name using the form to enter the game</p>
+                        <h4>Welcome Player - Please input your name using the form to enter the game</h4>
                     </div>
                     <div class="col-12">
                         <div class="name-form">
@@ -80,8 +80,12 @@
 
             <section class="buttons">
                 <div class="row mb-5">
-                    <div class="col-12 text-center">
-                        <p>Choose a Fight!</p>
+                    <div class="col-12 text-center mb-3">
+                        <h4>Choose a Fight!</h4>
+                    </div>
+                    <div class="col-12 text-center mb-3">
+                        <h5 id="autoDeathText">Turn on auto death for double or nothing!</h5>
+                        <button class="btn btn-success" id="autoDeathButton">Auto Death</button>
                     </div>
                     <div class="col-3 text-center">
                         <button class="btn btn-success" id="startEasy">Easy</button>
@@ -180,6 +184,7 @@
             <section class="load">
                 <div class="row">
                     <div class="col-12">
+                        <h5>Or, if you've been here before, load your game here! </h5>
                         <button class="btn btn-success" id="loadButton">Load Game!</button>
                     </div>
                 </div>
