--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <div class="bg">
-
-        <div class="container">
+        <br>
+        <div class="container game-bg">
 
             <section class="header">
                 <div class="row">
@@ -74,6 +74,9 @@
                         <div class="col-4 col-md-2">
                             <p class="display-stat">Speed: <span id="playerSpeed"></span></p>
                         </div>
+                        <div class="col-12">
+                            <p class="display-stat">Kills: <span id="playerKills"></span></p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -81,11 +84,11 @@
             <section class="buttons">
                 <div class="row mb-5">
                     <div class="col-12 text-center mb-3">
-                        <h4>Choose a Fight!</h4>
-                    </div>
-                    <div class="col-12 text-center mb-3">
                         <h5 id="autoDeathText">Turn on auto death for double or nothing!</h5>
                         <button class="btn btn-success" id="autoDeathButton">Auto Death</button>
+                    </div>
+                    <div class="col-12 text-center mb-3">
+                        <h4>Choose a Fight!</h4>
                     </div>
                     <div class="col-3 text-center">
                         <button class="btn btn-success" id="startEasy">Easy</button>
