Bringing in Icons for UX updates

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nu Game</title>
+    <title>Grindhouse</title>
 
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,7 +19,7 @@
             <section class="header">
                 <div class="row">
                     <div class="col-12 mt-2">
-                        <h1>NU Game</h1>
+                        <h1>Grindhouse</h1>
                     </div>
                 </div>
             </section>
@@ -116,10 +116,12 @@
                 </div>
                 <div class="row">
                     <div class="col-6 text-center">
-                        <button class="btn btn-warning" id="enterShop">Shop</button>
+                        <a type="button" class="icon-button" id="enterShop"></a>
+                        <p>Enter Shop</p>
                     </div>
                     <div class="col-6 text-center">
-                        <button class="btn btn-warning" id="enterTraining">Training</button>
+                        <a type="button" class="icon-button" id="enterTraining"></a>
+                        <p>Enter Training</p>
                     </div>
                 </div>
             </section>
@@ -171,7 +173,8 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-center">
-                        <button class="btn btn-warning" id="leaveShop">Leave Shop</button>
+                        <a type="button" class="icon-button" id="leaveShop"></a>
+                        <p>Leave Shop</p>
                     </div>
                 </div>
             </section>
@@ -190,7 +193,8 @@
                 </div>
                 <div class="row">
                     <div class="col-12 text-center">
-                        <button class="btn btn-warning" id="leaveTraining">Leave Training</button>
+                        <a type="button" class="icon-button" id="leaveTraining"></a>
+                        <p>Leave Training</p>
                     </div>
                 </div>
             </section>
