icons fully updated

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <section class="save">
                 <div class="row text-center">
                     <div class="col-6">
-                        <button class="btn btn-success" id="saveButton">Save Game!</button>
+                        <button class="icon-button admin-buttons" id="saveButton"></button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-success" id="deleteButton">Delete Game</button>
+                        <button class="icon-button admin-buttons" id="deleteButton"></button>
                     </div>
                 </div>
             </section>
@@ -85,7 +85,7 @@
                 <div class="row mb-5 text-center">
                     <div class="col-12 mb-3">
                         <h5 id="autoDeathText">Turn on auto death for double or nothing!</h5>
-                        <button class="btn btn-success" id="autoDeathButton">Auto Death</button>
+                        <button class="icon-button" id="autoDeathButton"></button>
                     </div>
                     <div class="col-12 mb-3">
                         <h4>Choose a Fight!</h4>
@@ -116,11 +116,11 @@
                 </div>
                 <div class="row">
                     <div class="col-6 text-center">
-                        <a type="button" class="icon-button" id="enterShop"></a>
+                        <button class="icon-button" id="enterShop"></button>
                         <p>Enter Shop</p>
                     </div>
                     <div class="col-6 text-center">
-                        <a type="button" class="icon-button" id="enterTraining"></a>
+                        <button class="icon-button" id="enterTraining"></button>
                         <p>Enter Training</p>
                     </div>
                 </div>
@@ -129,10 +129,10 @@
             <section class="combat">
                 <div class="row text-center mb-3">
                     <div class="col-6">
-                        <button class="btn btn-warning" id="attackButton">Attack</button>
+                        <button class="icon-button" id="attackButton"></button>
                     </div>
                     <div class="col-6">
-                        <button class="btn btn-success" id="healButton">Heal</button>
+                        <button class="icon-button" id="healButton"></button>
                     </div>
                 </div>
                 <div class="row text-center">
@@ -164,16 +164,16 @@
                 <div class="row text-center mb-5">
                     <div class="col-md-6 col-12">
                         <h4>Upgrade Power Cost: <span id="powerUpgrade"></span></h4>
-                        <button class="btn btn-success" id="buyPower">Upgrade Power</button>
+                        <button class="icon-button" id="buyPower"></button>
                     </div>
                     <div class="col-md-6 col-12">
                         <h4>Upgrade Speed Cost: <span id="speedUpgrade"></span></h4>
-                        <button class="btn btn-success" id="buySpeed">Upgrade Speed</button>
+                        <button class="icon-button" id="buySpeed"></button>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a type="button" class="icon-button" id="leaveShop"></a>
+                        <button class="icon-button" id="leaveShop"></button>
                         <p>Leave Shop</p>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                 <div class="row text-center mb-5">
                     <div class="col-12">
                         <h4>Level Up Cost: <span id="levelUpgrade"></span></h4>
-                        <button class="btn btn-success" id="buyLevel">Level Up</button>
+                        <button class="icon-button" id="buyLevel"></button>
                     </div>
                 </div>
                 <div class="row">
@@ -203,7 +203,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h5>Or, if you've been here before, load your game here! </h5>
-                        <button class="btn btn-success" id="loadButton">Load Game!</button>
+                        <button class="icon-button admin-buttons" id="loadButton"></button>
                     </div>
                 </div>
             </section>
