Put setenemylevel behind level 20 barrier

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                         <button class="btn btn-danger" id="startBoss">Boss</button>
                     </div>
                     <div class="col-6 col-md-2">
-                        <h5>Or Set A Random Enemy Level!</h5>
+                        <h5>Set Enemy Level (Unlocks at level 20)</h5>
                     </div>
-                    <div class="col-6 col-md-2">
+                    <div class="col-6 col-md-2" id="levelSetter">
                         <div class="input-group mb-3">
                             <input type="number" min="0" step="1" class="form-control" id="enemy-level" placeholder="Enemy Level">
                             <div class="input-group-append">
