UX updates and added footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,15 @@
             <section class="name">
                 <div class="row">
                     <div class="col-12">
-                        <h4>Welcome Player - Please input your name using the form to enter the game</h4>
+                        <h2 class="mb-2">Welcome to the Grindhouse</h2>
+                        <h5 class="ml-2">You awaken in a nameless town with no memories of your own.</br>
+                            Before you can gather your thoughts, a sword is thurst into your hand.</br>
+                            Like countless souls before you, you have ended up in the neverending fighting pits, otherwise known as The Grindhouse.</br>
+                            Death awaits most, but riches, power and secrets of the world hide in the depths.</br>
+                            A Strange voice cracks through the air:</br>
+                            </br>
+                        </h5>
+                        <h4>"What is your name?"</h4>
                     </div>
                     <div class="col-12">
                         <div class="name-form">
@@ -229,6 +237,22 @@
             </section>
 
         </div>
+
+        <!-- Footer -->
+
+        <div class="social-icons text-center mb-4 mt-4">
+            <p class="small">Created By Jack Snowdon</p>
+            <a href="https://www.linkedin.com/in/jack-snowdon-5b903b183/" target="_blank">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://github.com/JackSnowdon" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://jacksnowdon.co.uk" target="_blank">
+                <i class="far fa-user"></i>
+            </a>
+        </div>
+
     </div>
 
 
