small bug fixes and rearranging run.js

--- a/index.html
+++ b/index.html
@@ -136,12 +136,15 @@
 
             <section class="combat">
                 <div class="row text-center mb-3">
-                    <div class="col-6">
+                    <div class="col-4">
                         <button class="icon-button" id="attackButton"></button>
                     </div>
-                    <div class="col-6">
+                    <div class="col-4">
                         <button class="icon-button" id="healButton"></button>
                     </div>
+                    <!-- <div class="col-4">
+                        <button class="btn btn-warning" id="counterButton">Counter</button>
+                    </div> -->
                 </div>
                 <div class="row text-center">
                     <div class="col-12">
