added counter function

--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                     <div class="col-4">
                         <button class="icon-button" id="healButton"></button>
                     </div>
-                    <!-- <div class="col-4">
+                    <div class="col-4">
                         <button class="btn btn-warning" id="counterButton">Counter</button>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="row text-center">
                     <div class="col-12">
