--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <button class="icon-button" id="healButton"></button>
                     </div>
                     <div class="col-4">
-                        <button class="btn btn-warning" id="counterButton">Counter</button>
+                        <button class="icon-button" id="counterButton"></button>
                     </div>
                 </div>
                 <div class="row text-center">
